finish examples for lecture 2

--- a/Slides/lecture02.tex
+++ b/Slides/lecture02.tex
@@ -518,7 +518,7 @@ The best criterion for evaluating the quality of an experiment is whether it man
 
 
 
-\section[Paradigms]{Common Paradigms and Examples}
+\section[Examples]{Common Paradigms and Examples}
 \frame{\tableofcontents[currentsection]}
 
 
@@ -792,9 +792,11 @@ You will earn \$1 for every correct answer you give. So, if you answer 3 of the 
 
 \frametitle{A classic vignette\footnote{Gilens, M. 1996. ```Race coding' and white opposition to welfare. \textit{American Political Science Review} 90(3): 593--604.}}
 
+\small
+
 Now think about a \textbf{(black/white)} woman in her early thirties. She is a high school \textbf{(graduate/drop out)} with a ten-year-old child, and she has been on welfare for the past year.
 
-\begin{itemize}\tiny
+\begin{itemize}\footnotesize
 \item How likely is it that she will have more children in order to get a bigger welfare check? (1 = Very likely, \dots, 7 = Not at all likely)
 \item How likely do you think it is that she will really try hard to find a job in the next year? (1 = Very likely, \dots, 7 = Not at all likely)
 \end{itemize}
@@ -803,27 +805,57 @@ Now think about a \textbf{(black/white)} woman in her early thirties. She is a h
 
 \frame{
 
-\frametitle{Article-type vignettes}
+\frametitle{{\normalsize Newer vignette\footnote{Banerjee et al. 2012. ``Are Poor Voters Indifferent to Whether Elected Leaders are Criminal or Corrupt? A Vignette Experiment in Rural India.'' Working paper.}}}
 
-% articles
+\small
 
-% Nelson et al.
+Imagine that you were living in a village in another district in Uttar Pradesh and that you were voting for candidates in \textbf{(village/state/national)} election. Here are the two candidates who are running against each other: The first candidate is named \textbf{(caste name)} and is running as the \textbf{(BJP/SP/BSP)} party candidate. \textbf{(Corrupt/criminality allegation)}. His opponent is named \textbf{(caste name)} and is running as the \textbf{(BJP/SP/BSP)} party candidate. \textbf{(Opposite corrupt/criminality allegation)}. From this information, please indicate which candidate you would vote for in the \textbf{(village/state/national)} election. 
 
 }
 
 
 \frame{
 
-\frametitle{Video manipulations}
+\frametitle{{\normalsize Longer texts\footnote{Druckman \& Leeper. 2012. ``Learning More from Political Communication Experiments: Pretreatment and Its Effects.'' \textit{American Journal of Political Science} 56(4): 875--896.}}}
 
-% videos
+\small
+
+We are testing materials for use in a study \textbf{\only<1>{of the structure of sentences people use when writing news editorials}\only<2>{that is related to the kinds of opinions people form about public policies}}. Along these lines, we would like you to read a series of paragraphs, taken from recent major newspaper editorials.
 
 }
 
+\frame{
 
-% vignette
-% text
-% video
+\small
+
+Please read the following paragraphs and, for each, rate \textbf{\only<1>{how \textit{dynamic} you think it is. A paragraph is more ``dynamic'' when it uses more vivid action words. For example, a statement like, ``He sped up and raced through the light before crashing into the swerving truck,'' seems more dynamic than, ``He went faster to get through the light before having an accident.'' The action words in the first sentence (which we have highlighted in bold) seem more dynamic or vivid than those contained in the second sentence.}\only<2>{the extent to which it decreases or increases your support for the Patriot Act. In subsequent surveys we will ask you for your overall opinion about the state-run casino (i.e., the extent to which you oppose or support the state-run casino).}} There are no right or wrong opinions and your responses to all questions are completely confidential.
+
+}
+
+\frame{
+
+\small
+
+Please read the paragraphs carefully and, after each one, rate \textbf{\only<1>{the extent to which you think it is \textit{dynamic}}\only<2>{the extent to which it decreases or increases your support for the Patriot Act}}.\\
+
+\vspace{1em}
+
+\footnotesize
+
+With the passage of the Patriot Act in 2001, the FBI can now enter your home, search around, and doesn't ever have to tell you it was there. You could be perfectly innocent, yet federal agents can go through your most personal effects. When considering new laws, a test of the impact on liberty should be required. On that test, the Patriot Act fails. At a massive 342 pages, it potentially violates at least six of the ten original amendments known as the Bill of Rights --- the First, Fourth, Fifth, Sixth, Seventh and Eighth Amendments --- and possibly the Thirteenth and Fourteenth as well.
+
+}
+
+\frame{
+
+\frametitle{{\normalsize Example\footnote{Merolla \& Zechmeister. 2013. ``Evaluating Political Leaders in Times of Terror and Economic Threat: The Conditioning Influence of Politician Partisanship.'' \textit{Journal of Politics} 75(3): 599--712.}}}
+
+\begin{center}
+\includegraphics<1>[width=.85\textwidth]{images/merollazechmeister1}
+\includegraphics<2>[width=.85\textwidth]{images/merollazechmeister2}
+\end{center}
+
+}
 
 
 \frame{
@@ -876,6 +908,77 @@ Now think about a \textbf{(black/white)} woman in her early thirties. She is a h
 \end{itemize}
 
 }
+
+
+\frame{
+
+\frametitle{Non-textual Manipulations}
+
+\small
+
+\begin{itemize}\itemsep0.5em
+\item Images can work well
+\item Standalone or embedded in a text or question
+\item<2-> Examples
+	\begin{itemize}\footnotesize
+	\item<2-> Kalmoe \& Gross\footnote{``Cueing Patriotism, Prejudice, and Partisanship in the Age of Obama: Experimental Tests of U.S. Flag Imagery Effects in Presidential Elections.'' \textit{Political Psychology}: in press.} measure impact of patriotic cues on candidate support by showing images of candidates with and without flags
+	\item<3-> Subliminal primes possible, depending on software
+	\item<4-> Lots of recent examples of facial manipulation
+	\end{itemize}
+
+\end{itemize}
+
+}
+
+\frame{
+
+\frametitle{Example\footnote{Iyengar et al. 2010. ``Do Explicit Racial Cues Influence Candidate Preference? The Case of Skin Complexion in the 2008 Campaign.'' Working paper.}}
+
+\includegraphics[width=\textwidth]{images/IyengarMessingBailenson}
+
+}
+
+\frame{
+
+\frametitle{{\normalsize Example\footnote{Laustsen \& Petersen. 2016. ``Winning Faces vary by Ideology.'' \textit{Political Communication} 33(2): 188--211.}}}
+
+\begin{center}
+\includegraphics[width=\textwidth, trim={0cm 0cm 0cm 9cm}, clip]{images/laustsen}
+\end{center}
+}
+
+\frame{
+\frametitle{{\normalsize Example\footnote{Bailenson et al. 2006. ``Transformed Facial Similarity as a Political Cue: A Preliminary Investigation.'' \textit{Political Psychology} 27(3): 373--385.}}}
+
+\begin{center}
+\includegraphics[width=\textwidth, trim={0cm 7.7cm 0cm 0cm}, clip]{images/BailensonGarlandIyengar}
+\end{center}
+}
+
+
+
+
+\frame{
+
+\frametitle{{\normalsize Audio \& Video manipulations}}
+
+\begin{itemize}
+\item Can be problematic for same reasons as long texts
+\item Best practices
+	\begin{itemize}
+	\item Keep it short
+	\item Have the video play automatically
+	\item Disallow survey progression
+	\end{itemize}
+\item<2->Examples
+	\begin{itemize}
+	\item Audio: Sound of different voices saying the same sentence
+	\item Video: Advertisments\footnote{Vavreck. 2007 ``The Exaggerated Effects of Advertising on Turnout: The Dangers of Self-Reports.'' \textit{Quarterly Journal of Political Science} 2: 325--343.}
+	\end{itemize}	
+\end{itemize}
+
+}
+
 
 
 
@@ -962,62 +1065,40 @@ A recent proposal \only<2>{\textbf{by the Taliban}} calls for the sweeping refor
 
 % quasi-experiments and field experiments
 
-
 \frame{
 
-\frametitle{{\normalsize Field Designs}}
+\frametitle{{\normalsize Beyond One-shot Designs}}
+
+\small
 
 \begin{itemize}\itemsep0.5em
-\item Surveys can be used as a measurement instrument for a field treatment
-\item No manipulation in the survey itself
-\item Survey only measures outcomes
-\item<2-> Common uses:
-	\begin{itemize}
-	\item Post test only Design
-	\item Pre-post Design
+\item Surveys can be used as a measurement instrument for a field treatment or a manipulation applied in a different survey panel wave
+	\begin{itemize}\footnotesize
+	\item Measure effect duration in two-wave panel
+	\item Solicit pre-treatment outcome measures in a two-wave panel
+	\item Measure effects of field treatment in post-test only design
+	\item Randomly encourage field treatment in pre-test and measure effects in post-test
 	\end{itemize}
-\item<3-> Problems? Compliance \& nonresponse
+\item<2-> Problems? Compliance \& nonresponse
 \end{itemize}
 
 }
 
 
-
 \frame{
 
-\frametitle{{\normalsize Randomized Treatment}}
+\frametitle{{\normalsize Effect Duration}}
 
-\small
-
-\begin{itemize}\itemsep-0.2em
-\item Examples:
-	\begin{enumerate}
-	\item<2-> Citizens randomly sent a letter by post encouraging them to reduce water usage
-	\item<3-> Different local media markets randomly assigned to receive different advertising
-	\end{enumerate}
-\item<4-> Survey is used to measure outcomes, when treatment assignment is already known
-\end{itemize}
-
-}
-
-
-
-
-\frame{
-
-\frametitle{{\normalsize Quasi-Experimental Treatment}}
-
-\small
-
-\begin{itemize}\itemsep-0.2em
-\item Quasi-Experiments are situations where randomization-like forces influence the values of independent variables
+\begin{itemize}\itemsep0.5em
+\item Use a two- (or more-) wave panel to measure duration of effects
 	\begin{itemize}
-	\item Often ``natural'' experiments where boundaries, discontinuities, or interruptions disrupt treatment-assignment
+	\item T1: Treatment and outcome measurement
+	\item T2+: Outcome measurement
 	\end{itemize}
-\item<2-> Examples:
+\item Two main concerns (non unique to survey experiments)
 	\begin{itemize}
-	\item<2-> Respondents are randomly assigned to be interviewed before or after an event
-	\item<3-> Respondents interviewed before \textit{and} after an event that ``randomly'' affects only some, with within-subjects comparisons
+	\item Attrition
+	\item Panel conditioning
 	\end{itemize}
 \end{itemize}
 
@@ -1025,18 +1106,7 @@ A recent proposal \only<2>{\textbf{by the Taliban}} calls for the sweeping refor
 
 \frame{
 
-\frametitle{Albertson and Lawrence}
-
-What's this study about? What is their quasi-experimental design?
-
-}
-
-
-\frame{
-
-\frametitle{Within-Subjects Designs}
-
-
+\frametitle{{\normalsize Within-Subjects Designs}}
 
 }
 
@@ -1126,6 +1196,73 @@ What's this study about? What is their quasi-experimental design?
 
 
 
+
+\frame{
+
+\frametitle{{\normalsize Randomized Field Treatment}}
+
+\small
+
+\begin{itemize}\itemsep-0.2em
+\item Examples:
+	\begin{enumerate}
+	\item<2-> Citizens randomly sent a letter by post encouraging them to reduce water usage
+	\item<3-> Different local media markets randomly assigned to receive different advertising
+	\end{enumerate}
+\item<4-> Survey is used to measure outcomes, when treatment assignment is already known
+\item<5-> Issues
+	\begin{itemize}
+	\item<6-> Nonresponse
+	\item<7-> Noncompliance
+	\end{itemize}
+\end{itemize}
+
+}
+
+\frame{
+
+\frametitle{{\normalsize Treatment Encouragement}}
+
+\small
+
+\begin{itemize}\itemsep-0.2em
+\item Design:
+	\begin{itemize}
+	\item T1: Encourage treatment
+	\item T2: Measure effects
+	\end{itemize}
+\item Examples:
+	\begin{enumerate}
+	\item Albertson and Lawrence
+	\end{enumerate}
+\item<5-> Issues
+	\begin{itemize}
+	\item<6-> Attrition
+	\item<7-> Noncompliance
+	\end{itemize}
+\end{itemize}
+
+}
+
+
+\frame{
+
+\frametitle{Treatment Noncompliance}
+
+\begin{itemize}
+\item More on this Friday
+\item Quick preview today
+\item<2-> Several strategies
+	\begin{itemize}
+	\item ``As treated'' analysis
+	\item ``Intention to treat'' analysis
+	\item Estimate a LATE
+	\end{itemize}
+\end{itemize}
+
+}
+
+
 \frame{
 	\frametitle{{\large Local Average Treatment Effect}}
 	\small
@@ -1156,20 +1293,6 @@ What's this study about? What is their quasi-experimental design?
 		\item In a regression, this is:\\
 			$E[y_i|w_i] = \beta_0 + \text{LATE} \times E[x_i|w_i]$
 	\end{itemize}
-}
-
-
-
-\frame{
-	\frametitle{What is ``instrumental''?}
-	\begin{itemize}\itemsep1em
-		\item $W$ must be a crucial cause of $X$'s effect on $Y$
-		\item $W$ is the quasi-experimental shock to the causal process in our graph
-			\begin{itemize}
-			\item It is not caused by $X$ or $Y$
-			\item It does not cause $Y$ except through $X$
-			\end{itemize}
-	\end{itemize}	
 }
 
 
